# kimarucommonstep1to7

kimaru_kernel_core_v1/: README.md  pyproject.toml  test_setup_api.py
kimaru_kernel_core_v1/docs/: architecture.md  glossary.md
kimaru_kernel_core_v1/examples/: boot_demo.py  kimaru_manifest_example.json
kimaru_kernel_core_v1/kimaru_core/agent_fabric/: __init__.py  base_agent.py  descriptor.py  invoker.py  observe.py  policy_guard.py  registry.py  scripted_agent.py  security_flag.py
kimaru_kernel_core_v1/kimaru_core/algorithms/: __init__.py  base.py  descriptor.py  registry.py
kimaru_kernel_core_v1/kimaru_core/app/: main.py  ui.html
kimaru_kernel_core_v1/kimaru_core/artifacts/: __init__.py  active_pointer_store.py  artifact_models.py  artifact_ref.py  artifact_store.py  integrity.py  kinds.py
kimaru_kernel_core_v1/kimaru_core/core_context/: __init__.py  core_context.py
kimaru_kernel_core_v1/kimaru_core/decision_tracker/: __init__.py  event_types.py  models.py  tracker.py
kimaru_kernel_core_v1/kimaru_core/governance/: __init__.py  gateway.py  models.py
kimaru_kernel_core_v1/kimaru_core/identity/: models.py
kimaru_kernel_core_v1/kimaru_core/memory/: __init__.py  agent_memory.py
kimaru_kernel_core_v1/kimaru_core/orchestration/: __init__.py  execution_plan.py  living_store.py  run_coordinator.py  zone1_example.py  zone_kernel_interface.py  zone_loader.py  zone_models.py
kimaru_kernel_core_v1/kimaru_core/runtime/: __init__.py  boot_manager.py  manifest.py  precedence_resolver.py
kimaru_kernel_core_v1/kimaru_core/templates/: template_service.py
(+25 files in other folders)
